[package]
name = "enum_cycling"
version = "0.1.1"
authors = ["Zij-IT <elijah.reed@hartvigsen.xyz>"]
edition = "2018"
license= "MIT"

description = "Small macro for working with enums"
keywords = ["enum", "macro", "pro-macro"]

homepage = "https://github.com/Zij-IT/EnumCycling"
repository = "https://github.com/Zij-IT/EnumCycling"
readme = "../README.md"

[dependencies]
enum_cycling_derive = { path = "../enum_cycling_derive", optional = true, version = "0.1.0"}

[dev-dependencies]
enum_cycling_derive = { path = "../enum_cycling_derive", version = "0.1.0"}

[features]
derive = ["enum_cycling_derive"]

[package.metadata.docs.rs]
features = ["derive"]
