[package]
name = "enum_cycling_derive"
version = "0.1.0"
authors = ["Zij-IT <elijah.reed@hartvigsen.xyz>"]
edition = "2018"
license= "MIT"

description = "Small macro for working with enums"
keywords = ["enum", "macro", "pro-macro"]

homepage = "https://github.com/Zij-IT/EnumCycling"
repository = "https://github.com/Zij-IT/EnumCycling"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["parsing", "extra-traits"] }
