[package]
name = "example"
version = "0.1.0"
authors = ["Zij-IT <elijah.reed@hartvigsen.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_cycling = { path = "../enum_cycling"}
strum = "0.20"
strum_macros = "0.20.1"