[package]
name = "tests"
version = "0.1.0"
authors = ["Zij-IT <elijah.reed@hartvigsen.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_cycling = { path = "../enum_cycling", features = ["derive"]}
enum_cycling_derive = { path = "../enum_cycling_derive"}

